--- a/index.html
+++ b/index.html
@@ -39,53 +39,52 @@
             </div>
         </nav>
 
+
         <div class="hero">
-            <div class="hero">
-                <div class="hero_text">
-                    <h1>Want anything to be easy with LaslesVPN</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure id accusamus, voluptatem libero non
-                        ratione architecto, magnam et voluptatibus.</p>
-                    <a href="#">Get Started</a>
-                </div>
-                <div class="hero_image">
-                    <img src="assets/hero.png" alt="Illustration">
-                </div>
+            <div class="hero_text">
+                <h1>Want anything to be easy with LaslesVPN</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure id accusamus, voluptatem libero non
+                    ratione architecto, magnam et voluptatibus.</p>
+                <a href="#">Get Started</a>
+            </div>
+            <div class="hero_image">
+                <img src="assets/hero.png" alt="Illustration">
             </div>
         </div>
+
     </header>
 
     <section class="about">
         <div class="user">
             <div class="icon">
-                <img src="assets/icon1.png" alt="Icon">
+                <img src="./assets/user.png" alt="Icon">
             </div>
             <div class="text">
-                <p>90+</p>
-                <p>Users</p>
+                <p>90+<br>Users</p>
             </div>
         </div>
         <div class="location">
             <div class="icon">
-                <img src="assets/icon2.png" alt="Icon">
+                <img src="./assets/location.png" alt="Icon">
             </div>
             <div class="text">
-                <p>30+</p>
-                <p>Locations</p>
+                <p>30+<br>Locations</p>
             </div>
         </div>
         <div class="server">
             <div class="icon">
-                <img src="assets/icon3.png" alt="Icon">
+                <img src="./assets/Server.png" alt="Icon">
             </div>
             <div class="text">
-                <p>50+</p>
-                <p>Servers</p>
+                <p>50+<br>Servers</p>
             </div>
         </div>
     </section>
 
     <section class="features">
-        <div class="container"></div>
+        <div class="container">
+            <img src="./assets/features.png" alt="features image">
+        </div>
         <div class="container">
             <h2>We provide Many Features You Can Use</h2>
             <p>You can explore the features that we provide with fun and have their own functions each feature.</p>
